# wei-cli

./: README.md  pyproject.toml
src/wei/: cli.py
src/wei/intents/: ssh.md
src/wei/intents/dev/: Note.md  install.py  register.py  version.py
src/wei/intents/docker/: normal.py  register.py
src/wei/intents/doctor/: normal.py  register.py
src/wei/intents/git/: normal.py  register.py
