[project]
name = "wei-cli"
version = "0.0.1"
description = "Intent-driven CLI"
readme = "README.md"
requires-python = ">=3.12,<3.13"

[project.scripts]
wei = "wei.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wei"]